--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,17 @@
     
 
 }
+
+.header-h{
+    color: blue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    border-style: solid;
+    margin:auto;
+    border-radius: 15px;
+    height: 10vh;
+    width: 50vw;
+    
+
+}
