--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,3 @@
-.container-banner{
-    background-color: #f1f1f1;
-    text-align: center;
-    border-style: hidden;
-    border-radius: 15px;
-    font-family: 'Ruda', sans-serif;
-    height: 50vh;
-    width: 100vw;
-}
-
-.header-h1{
-    color: black;
-    font-family: 'Roboto Condensed', sans-serif;
-    text-align: center;
-    text-transform: uppercase;
-    border-style: solid;
-    margin:auto;
-    border-radius: 15px;
-    height: 25vh;
-    width: 100vw;
-    
-
-}
-
-.header-h{
-    color: blue;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-    text-transform: uppercase;
-    border-style: solid;
-    margin:auto;
-    border-radius: 15px;
-    height: 10vh;
-    width: 50vw;
-    
-
+.App {
+    height: 100vh;
 }
