--- a/src/pages/navigation/index.css
+++ b/src/pages/navigation/index.css
@@ -10,19 +10,18 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
 }
 
 #topButton {
     align-self: center;
-    height: 8vh;
-    width: 8vh;
+    height: 10vh;
+    width: 10vh;
     background-image: url('../../images/watchButton.png');
     background-repeat: no-repeat;
     background-size: contain;
     position: fixed;
-    right: 41vw;
-    top: 90vh;
+    top: 88vh;
 }
 
 
