--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -29,7 +29,7 @@
 
 }
 
-@import url('http://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 *
 {
     margin: 0;
